--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.4.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "18.1.0",
+    "sass": "^1.52.3",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
